update composer json

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         }
     },
     "require": {
-        "mongodb/mongodb": "^1.15"
+        "mongodb/mongodb": "^1.15",
+        "vlucas/phpdotenv": "^5.6"
     }
 }
